집에서한유튜브

--- a/2_CSS/css/youtube.css
+++ b/2_CSS/css/youtube.css
@@ -19,7 +19,6 @@ header {
     position:sticky;
     top: 0;
     display: flex;
-    margin : 5px
 }
 #section {
     padding: 10px 10px;
@@ -142,15 +141,15 @@ header > section:nth-child(4) {
 
 /* 메인화면 */
 .maincls {
-    padding: 0 30px;
-    height: 1100px;
+    padding: 0 20px;
+    height: 1200px;
     display: flex;
     flex-direction: row;
 }
 
 /* 왼쪽 */
 .left {
-    flex-basis: 75%;
+    flex-basis: 70%;
     display: flex;
     flex-direction: column;
 }
@@ -168,8 +167,9 @@ header > section:nth-child(4) {
     align-items: center;
 }
 .content1 iframe {
-    width: 1300px;
+    width: 1200px;
     height: 720px;
+    border-radius: 15px;
 }
 
 
@@ -188,7 +188,6 @@ header > section:nth-child(4) {
 
 .line1 {
     flex-basis: 20%;
-
     font-size: 20px;
     font-weight: bold;
 }
@@ -203,14 +202,187 @@ header > section:nth-child(4) {
     display: flex;
 }
 
+
+/*2번쨰줄 계정 아이콘이랑 이름*/
 .line2 > section:nth-child(1) {
     flex-basis: 20%;
+    display: flex;
 }
+
+/*왼쪽 계정바-계정아이콘*/
+.line2-left > section:nth-child(1) {
+    flex-basis: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#circle button {
+    background-color: transparent;
+    border: none;
+}
+
+#circle  img {
+    width: 55px;
+    cursor: pointer;
+}
+
+
+/*왼쪽 계정바-이름,구독자수*/
+.line2-left > section:nth-child(2) {
+    flex-basis: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#host-name > section:nth-child(1) {
+    flex-basis: 50%;
+    font-size: 16px;
+    padding-top: 3px;
+    font-weight: bold;
+    cursor: pointer;
+}
+#host-name > section:nth-child(2) {
+    flex-basis: 50%;
+    font-size: 12px;
+    font-weight: lighter;
+    color: rgb(69, 69, 69);
+}
+
+
+/*왼쪽 계정바-구독버튼*/
+.line2-left > section:nth-child(3) {
+    flex-basis: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#subscribe > button {
+    width: 60px;
+    height: 35px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+
+
+
+/*공백*/
 .line2 > section:nth-child(2) {
-    flex-basis: 32%;
+    flex-basis: 35%;
 }
+
+
+
+
+/*공유,다운로드 버튼들*/
 .line2 > section:nth-child(3) {
-    flex-basis: 48%;
+    flex-basis: 45%;
+    display: flex;
+    align-items: center;
+}
+
+.line2-right > section {
+    margin: 5px 4px;
+    height: 35px;
+    background-color: #e9e9e9;
+    border-radius: 20px;
+    border: none;
+}
+
+.line2-right button {
+    border: none;
+}
+
+
+/*좋아요 싫어요 버튼*/
+.line2-right > section:nth-child(1) {
+    flex-basis: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#goodbad>section:nth-child(1) {
+    flex-basis: 20%;
+}
+#goodbad>section:nth-child(2) {
+    flex-basis: 40%;
+}
+#goodbad>section:nth-child(3) {
+    flex-basis: 5%;
+    color: #7d7d7d;
+}
+#godbad>section:nth-child(4) {
+    flex-basis: 30%;
+}
+
+
+
+
+/*공유버튼*/
+.line2-right > section:nth-child(2) {
+    flex-basis: 17%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#share > section:nth-child(1) {
+    flex-basis: 35%;
+}
+#share > section:nth-child(2) {
+    color: #1e1e1e;
+    flex-basis: 35%;
+    text-align: center;
+    font-size: 14px;
+}
+
+
+
+/*오프라인 저장*/
+.line2-right > section:nth-child(3) {
+    flex-basis: 27%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#offline > section:nth-child(1) {
+    flex-basis: 15%;
+}
+#offline > section:nth-child(2) {
+    color: #1e1e1e;
+    font-size: 14px;
+    flex-basis: 70%;
+    text-align: center;
+}
+
+/*저장*/
+.line2-right > section:nth-child(4) {
+    flex-basis: 16%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#save > section:nth-child(1) {
+    flex-basis: 35%;
+}
+#save > section:nth-child(2) {
+    text-align: center;
+    color: #1e1e1e;
+    font-size: 14px;
+    flex-basis: 40%;
+}
+
+
+
+/*더보기*/
+.line2-right > section:nth-child(5) {
+    flex-basis: 7%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -218,14 +390,24 @@ header > section:nth-child(4) {
 
 
 
+
+/*3번째줄 더보기 회색칸*/
 .line3 {
+    padding: 10px;
+    font-size: 14px;
     flex-basis: 55%;
+    background-color: #e9e9e9;
+    border: none;
+    border-radius: 10px;
 }
-
-
-
-
-
+.line3:hover {
+    background-color: #d8d8d8;
+}
+.line3 button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
 
 
 
@@ -235,14 +417,215 @@ header > section:nth-child(4) {
 
 /*댓글*/
 .content3 {
-    flex-basis: 14%;
+    flex-basis: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.content3 button {
+    background-color: transparent;
+    border: none;
 }
 
+/*댓글 개수*/
+.content3 > section:nth-child(1) {
+    flex-basis: 20%;
+}
+#comment-head {
+    display: flex;
+    align-items: center;  
+}
+
+#comment-head > section:nth-child(1) {
+    flex-basis: 13%;
+    font-size: 20px;
+    font-weight: bold;
+}
+#comment-head > section:nth-child(2) {
+    flex-basis: 3%;
+}
+#comment-btn {
+    color: #1e1e1e;
+    font-size: 20px;
+}
+#comment-head button {
+    background-color: transparent;
+    border: none;
+}
+#comment-head > section:nth-child(3) {
+    flex-basis: 10%;
+    font-size: 14px;
+    color: #1e1e1e;
+}
+
+
+/*내댓글*/
+.content3 > section:nth-child(2) {
+    flex-basis: 20%;
+}
+#comment-my {
+    display: flex;
+}
+
+#comment-my section:nth-child(1) {
+    padding: 4px 0px;
+    padding-left: 4px;
+    flex-basis: 5%;
+}
+#comment-my img {
+    width: 50px;
+}
+#comment-my section:nth-child(2) {
+    flex-basis: 95%;
+}
+#comment-my input {
+    outline: none;
+    height: 50%;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #7d7d7d;
+}
+
+
+/*댓글1*/
+.content3 > section:nth-child(3) {
+    flex-basis: 30%;
+}
+#comment-1 {
+    display: flex;
+}
+#comment-1 section:nth-child(1) {
+    flex-basis: 5%;
+}
+#comment-1 img {
+    width: 55px;
+}
+
+
+
+#comment-1 section:nth-child(2) {
+    flex-basis: 95%;
+}
+#yung {
+    display: flex;
+    flex-direction: column;
+}
+
+#yung > section:nth-child(1) {
+    flex-basis: 30%;
+    display: flex;
+    align-items: center;
+}
+#yung > section:nth-child(1)> section:first-child {
+    font-size: 12px;
+    flex-basis: 7%;
+}
+#yung > section:nth-child(1)> section:last-child {
+    flex-basis: 20%;
+    color: #7d7d7d;
+    font-size: 11px;
+}
+
+
+#yung > section:nth-child(2) {
+    flex-basis: 30%;
+    font-size: 12px;
+}
+
+
+#yung > section:nth-child(3) {
+    flex-basis: 40%;
+    display: flex;
+    align-items: center;
+}
+#yung > section:nth-child(3) > section:nth-child(1) {
+    flex-basis: 3%;
+}
+#yung > section:nth-child(3) > section:nth-child(2) {
+    font-size: 14px;
+    flex-basis: 2%;
+}
+#yung > section:nth-child(3) > section:nth-child(3) {
+    flex-basis: 4%;
+}
+#yung > section:nth-child(3) > section:nth-child(4) {
+    font-size: 14px;
+    flex-basis: 3%;
+}
+
+
+
+/*댓글2*/
+.content3 > section:nth-child(4) {
+    flex-basis: 30%;
+}
+#comment-2 {
+    display: flex;
+}
+#comment-2 section:nth-child(1) {
+    flex-basis: 5%;
+}
+#comment-2 img {
+    width: 55px;
+}
+
+
+
+#comment-2 section:nth-child(2) {
+    flex-basis: 95%;
+}
+#burger {
+    display: flex;
+    flex-direction: column;
+}
+
+#burger > section:nth-child(1) {
+    flex-basis: 30%;
+    display: flex;
+    align-items: center;
+}
+#burger > section:nth-child(1)> section:first-child {
+    font-size: 12px;
+    flex-basis: 7%;
+}
+#burger > section:nth-child(1)> section:last-child {
+    flex-basis: 20%;
+    color: #7d7d7d;
+    font-size: 11px;
+}
+
+
+#burger > section:nth-child(2) {
+    flex-basis: 30%;
+    font-size: 12px;
+}
+
+
+#burger > section:nth-child(3) {
+    flex-basis: 40%;
+    display: flex;
+    align-items: center;
+}
+#burger > section:nth-child(3) > section:nth-child(1) {
+    flex-basis: 3%;
+}
+#burger > section:nth-child(3) > section:nth-child(2) {
+    font-size: 14px;
+    flex-basis: 2%;
+}
+#burger > section:nth-child(3) > section:nth-child(3) {
+    flex-basis: 4%;
+}
+#burger > section:nth-child(3) > section:nth-child(4) {
+    font-size: 14px;
+    flex-basis: 3%;
+}
 
 
 
 
 /*오른쪽 추천영상*/
 .right {
-    flex-basis: 25%;
+    flex-basis: 30%;
 }
