--- a/2_CSS/css/youtube.css
+++ b/2_CSS/css/youtube.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-
-    border: 1px solid black;
+    
+    /*border: 1px solid black;*/
 }
 
 body {
@@ -13,12 +13,21 @@ main {
     margin: auto;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
+
 /* 상단바 */
 header {
     background-color: white;
     position:sticky;
     top: 0;
     display: flex;
+    padding-top : 8px;
+    padding-bottom: 8px;
 }
 #section {
     padding: 10px 10px;
@@ -141,10 +150,7 @@ header > section:nth-child(4) {
 
 /* 메인화면 */
 .maincls {
-    padding: 0 20px;
-    height: 1200px;
     display: flex;
-    flex-direction: row;
 }
 
 /* 왼쪽 */
@@ -161,6 +167,7 @@ header > section:nth-child(4) {
 
 /*유튜브 공간*/
 .content1 {
+    margin-top: 20px;
     flex-basis: 68%;
     display: flex;
     justify-content: center;
@@ -168,7 +175,7 @@ header > section:nth-child(4) {
 }
 .content1 iframe {
     width: 1200px;
-    height: 720px;
+    height: 800px;
     border-radius: 15px;
 }
 
@@ -622,10 +629,357 @@ header > section:nth-child(4) {
     flex-basis: 3%;
 }
 
+#yung button, #burger button {
+    cursor: pointer;
+}
 
 
 
 /*오른쪽 추천영상*/
 .right {
     flex-basis: 30%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-right: 120px;
+    margin-left: 20px;
+}
+
+.ad {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #d8d8d8;
+    border-radius: 15px;
+    cursor: pointer;
+}
+
+#ad-top {
+    border: none;
+    flex-basis: 50%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: rgb(30, 39, 59);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#ad-top > section:nth-child(1) {
+    flex-basis: 10%;
+}
+#ad-top > section:nth-child(2) {
+    flex-basis: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#java > section {
+    flex-basis: 50%;
+    font-size: 6px;
+    color: white;
+}
+#java img {
+    width: 60px;
+}
+#ad-top button {
+    padding-bottom: 28px;
+    color: white;
+    font-size: 30px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+#ad-top > section:nth-child(3) {
+    flex-basis: 10%;
+}
+
+
+
+
+#ad-bottom {
+    border: none;
+    background-color: white;
+    flex-basis: 50%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#ad-bottom > section:nth-child(1) {
+    flex-basis: 20%;
+}
+#ad-bottom img {
+    width: 50px;
+}
+#ad-bottom > section:nth-child(2) {
+    padding: 0 8px;
+    flex-basis: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#ad-text > section:first-child {
+    color: black;
+    flex-basis: 50%;
+    font-size: 16px;
+}
+#ad-text > section:last-child {
+    color: black;
+    flex-basis: 50%;
+    font-size: 13px;
+}
+#ad-bottom > section:nth-child(3) {
+    cursor: pointer;
+    height: 35px;
+    border: none;
+    text-align: center;
+    color: white;
+    flex-basis: 20%;
+    background-color: rgb(58, 74, 221);
+    border-radius: 20px;
+    line-height: 33px;
+}
+
+
+
+.right-btn {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    padding: 15px 0;
+}
+.right-btn > section {
+    font-size: 15.3px;
+    padding: 0 3px;
+    border: none;
+    text-align: center;
+    cursor: pointer;
+    margin: 4px;
+    background-color: #e9e9e9;
+    border-radius: 5px;
+}
+.right-btn > section:first-child {
+    background-color: black;
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.rec-video {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.rec-video > section > section:first-child {
+    flex-basis: 30%;
+}
+.rec-video > section > section:last-child {
+    flex-basis: 70%;
+}
+
+
+
+
+
+#video-1 {
+    display: flex;
+}
+#video-1-title {
+    display: flex;flex-direction: column;
+
+}
+#video-1-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-1-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-2 {
+    display: flex;
+}
+#video-2-title {
+    display: flex;flex-direction: column;
+}
+#video-2-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-2-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-3 {
+    display: flex;
+}
+#video-3-title {
+    display: flex;flex-direction: column;
+}
+#video-3-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-3-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-4 {
+    display: flex;
+}
+#video-4-title {
+    display: flex;flex-direction: column;
+}
+#video-4-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-4-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-5 {
+    display: flex;
+}
+#video-5-title {
+    display: flex;flex-direction: column;
+}
+#video-5-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-5-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-6 {
+    display: flex;
+}
+#video-6-title {
+    display: flex;flex-direction: column;
+}
+#video-6-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-6-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-7 {
+    display: flex;
+}
+#video-7-title {
+    display: flex;flex-direction: column;
+}
+#video-7-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-7-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-8 {
+    display: flex;
+}
+#video-8-title {
+    display: flex;flex-direction: column;
+}
+#video-8-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-8-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-9 {
+    display: flex;
+}
+#video-9-title {
+    display: flex;flex-direction: column;
+}
+#video-9-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-9-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
+}
+
+
+
+#video-10 {
+    display: flex;
+}
+#video-10-title {
+    display: flex;flex-direction: column;
+}
+#video-10-title > section:first-child {
+    color: black;
+    font-weight: bold;
+    font-size: 15px;
+    height: 45px;
+}
+#video-10-title > section:last-child {
+    font-size: 13px;
+    color: #535353;
 }
