--- a/3_Javascript/css/연습용1.css
+++ b/3_Javascript/css/연습용1.css
@@ -1,9 +1,35 @@
-#total {
-    font-size: 25px;
-    font-weight: bold;
+body {
+    background-image: url(../html/1327980.png);
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-body button {
-    width: 25px;
-    height: 25px;
+
+#portfolio {
+    margin-top: 200px;
+    height: 300px;
+    font-size: 200px;
+    font-weight: bold;
+    color: skyblue;
+    text-shadow: 10px 10px 0 rgb(251, 255, 200);
+}
+
+#box {
+    height: 100px;
+}
+
+span {
+    background-color: teal;
+    border-radius: 10px;
+    font-weight: bold;
+    color: white;
+    padding: 0 20px;
+    transition-duration: 0.3s;
+    cursor: pointer;
+}
+
+span:hover {
+    background-color: indianred;
 }
