--- a/3_Javascript/css/연습문제7.css
+++ b/3_Javascript/css/연습문제7.css
@@ -103,7 +103,7 @@ footer {
     border-radius: 6px;
     width: 600px;
     height: 50px;
-    margin: px 0;
+    margin: 5px 0;
 }
 #empty-cart {
     /* 초기에는 보이도록 설정 */
